--- a/sass2/style/css/exercice1.css
+++ b/sass2/style/css/exercice1.css
@@ -1,31 +1,31 @@
 @charset "UTF-8";
 /*Créez, avec une boucle @for, 6 classes pour vos balises <p> qui auront la même police mais des tailles 2 à 12 rem.*/
-.par-1 p {
+.par-1 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2;
+  font-size: 2rem;
 }
 
-.par-2 p {
+.par-2 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 4;
+  font-size: 4rem;
 }
 
-.par-3 p {
+.par-3 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 6;
+  font-size: 6rem;
 }
 
-.par-4 p {
+.par-4 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 8;
+  font-size: 8rem;
 }
 
-.par-5 p {
+.par-5 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10;
+  font-size: 10rem;
 }
 
-.par-6 p {
+.par-6 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 12;
+  font-size: 12rem;
 }
