--- a/sass2/style/sass/exercice1.sass
+++ b/sass2/style/sass/exercice1.sass
@@ -2,6 +2,5 @@
 
 @for $idx from 1 through 6
     .par-#{$idx}
-        p
-            font-family: Arial, Helvetica, sans-serif
-            font-size: #{$idx*2}
+        font-family: Arial, Helvetica, sans-serif
+        font-size: #{$idx*2}rem
