--- a/sass2/style/sass/exercice3.sass
+++ b/sass2/style/sass/exercice3.sass
@@ -3,4 +3,5 @@
 $chifres: ("un": 1, "deux": 2, "trois": 3, "quatre":4,"cinq":5,"six":6, "sept":7, "huit":8,"neuf":9,"dix":10)
 @each $name,$value in $chifres
     .blockwidth-#{$name}
-        width: $value
+        width: #{$value}rem
+        border: solid 1px black
